# resurfacer

./: .gitignore  Cargo.toml  README.md  config.toml  resurfacer-host.json
.github/workflows/: release.yml
extension/: background.js  manifest.json
extension-firefox/: manifest.json
native-messaging/: com.resurfacer.host.json  setup.ps1
resurfacer-core/: Cargo.toml  build.rs
resurfacer-core/src/: bridge.rs  config.rs  idle_detector.rs  main.rs  messages.rs  presenter.rs  summarizer.rs  tab_store.rs  tab_tracker.rs
