[package]
name = "resurfacer-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resurfacer-core"
path = "src/main.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "idle_check"
path = "src/bin/idle_check.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }
