[package]
name = "resurfacer-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resurfacer-core"
path = "src/main.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "idle_check"
path = "src/bin/idle_check.rs"

[[bin]]
name = "night_mode"
path = "src/bin/night_mode.rs"

[[bin]]
name = "ram_flush"
path = "src/bin/ram_flush.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.30"

# Phase 3 - system tray icon
tray-icon = "0.14"

# Phase 3 - LLM via Ollama HTTP API (no C++ build required)
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
winapi = { version = "0.3", features = [
    "wingdi", "winuser", "errhandlingapi",
    "synchapi", "handleapi", "libloaderapi",
    "processthreadsapi", "securitybaseapi", "shellapi",
    "sysinfoapi", "winbase", "winnt",
] }
